--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -19,7 +19,7 @@
 
 <div id="top">
   <div id="one">
-    <%= link_to "面談日登録", meetings_new_path, class: "btn btn-success top-submit" %>
+    <%= link_to "面談日登録", teacher_meetings_new_path(current_user), class: "btn btn-success top-submit" %>
     <%= link_to "面談日時編集", "#", class: "btn btn-info top-submit" %>
   </div>
   <div id="two">
