--- a/app/views/document_items/new.html.erb
+++ b/app/views/document_items/new.html.erb
@@ -1,6 +1,9 @@
 <% provide(:item_url,document_item_create_path(@document)) %>
 <div class="text-center text-primary">
-  <h1 class="title_font">質問のフォーム作成</h1>
+ <ul class="document_ul">
+    <li id="document_img"><%= image_tag('/explain/form1.png',size:"60x60",style:"display:inline") %><li>
+    <li><h1 class="title_font">質問項目のフォーム作成</h1></li>
+  </ul>
 </div>
 <hr>
 <h2 class="title_font" style="font-size:24px;"><%= "タイトル:#{@document.title}" %><br><br>
