--- a/app/views/document_selects/new.html.erb
+++ b/app/views/document_selects/new.html.erb
@@ -1,7 +1,10 @@
-
 <div class="text-center text-primary">
-  <h1 class="title_font">選択肢作成</h1>
-</div><hr>
+  <ul class="document_ul">
+    <li id="document_img"><%= image_tag('/explain/form2.png',size:"60x60",style:"display:inline") %><li>
+    <li> <h1 class="title_font">選択肢作成</h1></li>
+  </ul>
+</div>  
+<hr>
 <h2 class="title_font" style="font-size:26px;"><%= "質問:#{@document_item.content}" %></h2>
 <% if flash[:danger].present? %>
   <div class="alert alert-danger" id="select_flash"><%= flash[:danger] %></div>
