--- a/app/views/documents/new2.html.erb
+++ b/app/views/documents/new2.html.erb
@@ -1,7 +1,10 @@
 
 <%= provide(:url,document_create2_path ) %>
 <div class="text-center text-primary">
-  <h1 class="title_font">新規書類作成(入力)</h1>
+  <ul class="document_ul">
+    <li id="document_img"><%= image_tag('/explain/input2.png',size:"60x60",style:"display:inline") %><li>
+    <li><h1 class="title_font">新規書類作成(入力)</h1></li>
+  </ul>
 </div>
 
 <%= render 'form', document: @document %>
