--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -29,7 +29,7 @@
     <% end %>
   </div>
   <div id="two">
-    <%= link_to  "#", class: "btn btn-default top-submit" do %>
+    <%= link_to  teacher_meeting_index2_path(@teacher), class: "btn btn-default top-submit" do %>
       <%= image_tag('/icon/sk.png',size:"20x20") %>
       面談返信状況確認
     <% end %>
