--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,23 +1,10 @@
-<% provide(:title, @user.name) %>
+<h1><%= @user.name + @user.name2 %></h1>
 
-<div class="row">
-  <div class="col-md-10 col-md-offset-1">
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th><%= User.human_attribute_name :name %></th>
-          <th><%= User.human_attribute_name :email %></th>
-          <th><%= User.human_attribute_name :created_at %></th>
-        </tr>
-      </thead>
 
-      <tbody>
-        <tr>
-          <td><%= @user.name %></td>
-          <td><%= @user.email %></td>
-          <td><%= @user.created_at %></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>    
+<div id="top">
+
+  <%= link_to "面談ページへ", user_meetings_new_user_path(user_id: @user.id, child_id: @child.id), class: "btn btn-success top-submit" %>
+
+  <%= link_to "提出ページへ", "#", class: "btn btn-info top-submit" %>
+
 </div>
