ブラウザ作成中閉じられた場合処理

--- a/app/assets/stylesheets/document_selects.scss
+++ b/app/assets/stylesheets/document_selects.scss
@@ -3,8 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #select_flash{
     display: block;
-    font-size: 22px;
-    font-weight:bold;
+    font-size: 18px;
+    width: 30%;
+    
 }
 #teacher_document_table{
     background-color: #fff;
