--- a/app/views/documents/new2.html.erb
+++ b/app/views/documents/new2.html.erb
@@ -14,7 +14,9 @@
 
 
 <style>
-body{
-    background-color:#fce2c4
-}
+  body{
+      background-color:#fce2c4
+      
+  }
+  #main_alert{display:none;}
 </style>
