--- a/app/views/documents/new3.html.erb
+++ b/app/views/documents/new3.html.erb
@@ -11,4 +11,5 @@
 <%= link_to '戻る', teacher_path(1),class:"btn btn-default btn-lg",style:"margin-left:-1%;" %>
 <style>
   body{ background-color:#3366CC;}
+  #main_alert{display:none;}
 </style>
