--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -14,4 +14,5 @@
 <%= link_to '戻る', teacher_path(1),class:"btn btn-default btn-lg",style:"margin-left:-1%;" %>
 <style>
   body{ background-color:#00FF00;}
+  #main_alert{display:none;}
 </style>
