--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= render 'layouts/header' %>
     <div class="container">
       <% flash.each do |message_type, msg| %>
-        <div class="alert alert-<%= message_type %>"><%= msg %></div>
+        <div class="alert alert-<%= message_type  %>" id="main_alert"><%= msg %></div>
       <% end %>
       <%= yield %>
       <%= debug(params) if Rails.env.development? %>
