保護者登録ページ表示変更、スケジュール調整ページ表示変更

--- a/app/views/meetings/_desired.html.erb
+++ b/app/views/meetings/_desired.html.erb
@@ -26,7 +26,7 @@
 <script>
 
   $('.js-searchable').select2({
-    maximumSelectionLength: <%= dates.count - 1 %>,
+    maximumSelectionLength: <%= dates.count %>,
     width: 300,
     placeholder: '都合が悪い時間を選択して下さい',
     language: {
