--- a/app/assets/stylesheets/meetings.scss
+++ b/app/assets/stylesheets/meetings.scss
@@ -1,8 +1,22 @@
 
+/* ページタイトル */
+
+#meeting-top-title {
+  text-align: center;
+  font-size: 50px;
+  font-family: 'M PLUS Rounded 1c';
+  margin-bottom: 30px;
+}
+
+#meeting-title {
+  text-align: center;
+  font-size: 25px;
+  font-family: 'M PLUS Rounded 1c';
+}
+
 /* 面談日時登録ページ */
 
 #content-left {
-  text-align: center;
   font-size: 20px;
 }
 
@@ -12,12 +26,7 @@
 
 #datepicker-submit {
   text-align: center;
-  margin-top: 10px;
-}
-
-.submit-width {
-  width: 15%;
-  margin: 9px;
+  margin-top: 20px;
 }
 
 /* datepicker */
@@ -25,7 +34,7 @@
 .ui-datepicker .ui-datepicker-header {  //header部分
     position: relative;
     padding: .2em 0;
-    font-size: 25px;
+    font-size: 18px;
 }
 
 .ui-widget-header {   //header部分
@@ -33,6 +42,7 @@
     background: #ece8da/*{bgColorHeader}*/ /*{bgImgUrlHeader}*/ /*{bgHeaderXPos}*/ /*{bgHeaderYPos}*/ /*{bgHeaderRepeat}*/;
     color: #433f38/*{fcHeader}*/;
     font-weight: bold;
+    font-family: 'M PLUS Rounded 1c';
 }
 
 .ui-widget-content {    //全体背景など
@@ -42,17 +52,20 @@
 }
 
 .ui-datepicker table {  //カレンダー日付部分
-    width: 100%;
-    font-size: 25px;
-    border-collapse: collapse;
+    font-size: 18px;
+    font-family: 'M PLUS Rounded 1c';
     margin: 0 0 .4em;
 }
 
+.ui-state-default {  //日付セルの高さ
+  height: 45px;
+}
+
 div.ui-datepicker {   //全体サイズなど
-  font-size: 15px;
-  width: 50%;
-  height: auto;
   margin: auto;
+  font-size: 18px;
+  width: 60%;
+  height: auto;
 }
 
 /* 日曜日のカラー設定 */
@@ -76,16 +89,29 @@ td.ui-datepicker-week-end a.ui-state-highlight{
 
 /* table */
 
-table {
+.meeting-table {
   margin-left: auto;
   margin-right: auto;
-}
-
-td {
+  font-size: 18px;
+  font-family: 'M PLUS Rounded 1c';
   text-align: center;
 }
 
+/* 保護者面談管理ページ */
+
+#yoyaku-count {
+  display: inline-block;
+  font-size: 18px;
+  font-family: 'M PLUS Rounded 1c';
+}
+
 /* 希望日モーダル */
+
+.meeting-modal-title {
+  text-align: center;
+  font-size: 25px;
+  font-family: 'M PLUS Rounded 1c';
+}
 
 .modal-desired {
   text-align: center;
@@ -101,4 +127,22 @@ td {
   .btn {
     width: 30%;
   }
+}
+
+/* ボタン */
+
+#submit-center {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.submit-width {
+  width: 30%;
+  font-size: 18px;
+  font-family: 'M PLUS Rounded 1c';
+}
+
+.select-font {
+  font-size: 18px;
+  font-family: 'M PLUS Rounded 1c';
 }
