--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,8 +1,8 @@
-<h1>面談スケジュール調整</h1>
+<div id="meeting-top-title">面談スケジュール調整</div>
 
 <div id=content>
   <%= form_with(url: teacher_schedule_update_path(@teacher), method: :patch, local:true) do |f| %>
-    <table class="table-bordered table-striped table-condensed" style="width: 100%; margin-top: 20px;">
+    <table class="table-bordered table-striped table-condensed meeting-table" style="width: 100%; margin-top: 20px;">
       <thead>
         <tr style="background: #FF9933; color: white;">
           <td>日付</td>
@@ -57,9 +57,11 @@
         <% end %>
       </tbody>
     </table>
-    <%= f.submit "更新", class: "btn btn-success"%>
+    <div id="submit-center">
+      <%= f.submit "更新", class: "btn btn-success submit-width"%>
+      <%#= form_with(url: push_path, local:true) do |f| %>
+        <%= f.submit "スケジュール決定送信", class: "btn btn-primary submit-width"%>
+      <%# end %>
+    </div>
   <% end %>
-  <%#= form_with(url: push_path, local:true) do |f| %>
-      <%#= f.submit "スケジュール決定送信", class: "btn btn-primary"%>
-  <%# end %>
 </div>
