--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,11 +1,14 @@
-<h1>面談日時登録</h1>
+<div id="meeting-top-title">面談日時登録</div>
+
+<div id="datepicker"></div>
 
 <% unless @meetings.empty? %>
-  <div id="content" style="padding-bottom: 20px;">
+  <div id="content">
+    <div id="meeting-title" style="margin-top: 20px;">面談時間の登録</div>
     <%= form_with(model: @meeting_time, url: teacher_meeting_create2_path(@teacher), local: true) do |f| %>
-      <table class="table-bordered table-striped table-condensed">
+      <table class="table-bordered table-striped table-condensed meeting-table" style="width: 100%; margin-bottom: 20px;">
         <thead>
-          <tr>
+          <tr style="background: #FF9933; color: white;">
             <td style="width: 60%;">開始時間</td>
             <td style="width: 20%;">面談時間</td>
             <td style="width: 10%;">枠</td>
@@ -16,11 +19,11 @@
         <tbody>
           <tr>
             <td>
-              <%= f.select :published_at_hour, @hour, {}, class: 'form-control box', style: "width: 45%;" %> :
-              <%= f.select :published_at_minute_1, @minutes, {}, class: 'form-control box', style: "width: 45%;" %>
+              <%= f.select :published_at_hour, @hour, {}, class: 'form-control box select-font', style: "width: 45%;" %> :
+              <%= f.select :published_at_minute_1, @minutes, {}, class: 'form-control box select-font', style: "width: 45%;" %>
             </td>
-            <td><%= f.select :published_at_minute_2, @minutes, {}, class: 'form-control' %></td>
-            <td><%= f.select :frame, @frame_list, {}, class: 'form-control' %></td>
+            <td><%= f.select :published_at_minute_2, @minutes, {}, class: 'form-control select-font' %></td>
+            <td><%= f.select :frame, @frame_list, {}, class: 'form-control select-font' %></td>
             <td><%= f.submit '登録', class: "btn btn-success" %></td>
           </tr>
         </tbody>
@@ -30,14 +33,13 @@
 <% end %>
 
 <div id="content">
-  <div id="datepicker"></div>
-
+  <div id="meeting-title">面談日の登録</div>
   <%= form_with(url: teacher_meeting_create_path(@teacher), local: true) do |f| %>
-    <table class="table-bordered table-striped table-condensed" style="width: 50%; margin-top: 20px;">
+    <table class="table-bordered table-striped table-condensed meeting-table" style="width: 100%;">
       <thead>
-        <tr>
+        <tr style="background: #FF9933; color: white;">
           <td>現在の登録日</td>
-          <td>この日付で登録される</td>
+          <td>この日付で登録されます</td>
         </tr>
       </thead>
 
