保護者、教員ログイン画面のview

--- a/app/assets/stylesheets/meetings.scss
+++ b/app/assets/stylesheets/meetings.scss
@@ -29,6 +29,13 @@
   margin-top: 20px;
 }
 
+/* 面談時間登録ページ */
+
+.box{
+  display: table-cell;  // 横揃え
+  text-align: center;
+}
+
 /* datepicker */
 
 .ui-datepicker .ui-datepicker-header {  //header部分
