--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+#teacher-login {
+  text-align: center;
+  margin-top: 20px;
+  font-size: 30px;
+  font-family: 'M PLUS Rounded 1c';
+}
