--- a/app/views/meetings/new_user.html.erb
+++ b/app/views/meetings/new_user.html.erb
@@ -1,7 +1,7 @@
 <div id="meeting-top-title"><%= @child.full_name %>さんの面談管理ページ</div>
 
 <% unless @meeting_children.present? %>
-  <h1>現在面談予定はございません。</h1>
+  <h1 id="meeting-top-title">現在面談予定はございません。</h1>
 <% else %>
 
   <!-- 子供が二人以上いた場合 -->
