--- a/app/assets/stylesheets/teachers.scss
+++ b/app/assets/stylesheets/teachers.scss
@@ -1,15 +1,19 @@
 
 /* 教員トップページ */
 
-#top {
+#teacher-top {
   text-align: center;
   #one,#two,#three,#four,#five {
     margin-top: 20px;
-    .top-submit {
-      width: 30%;
+    .top-button {
+      width: 40%;
+      font-size: 18px;
+      font-family: 'M PLUS Rounded 1c';
     }
     .last {
-      width: 60%;
+      width: 80%;
+      font-size: 18px;
+      font-family: 'M PLUS Rounded 1c';
     }
   }
 }
@@ -22,8 +26,9 @@
   border:1px solid #000;
   background-color:#F9F9F9;
   color:#000;
-  font-size:12px;
+  font-size:15px;
   margin: auto;
+  font-family: 'M PLUS Rounded 1c';
 }
 
 .box_title{
@@ -31,7 +36,8 @@
   padding:5px;
   width:500px;
   font-weight:bold;
-  font-size:14px;
+  font-size:18px;
+  font-family: 'M PLUS Rounded 1c';
   background-color:#000;
   color:#fff;
   text-align: center;
