--- a/app/assets/stylesheets/documents.scss
+++ b/app/assets/stylesheets/documents.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 @import url('https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c');
-.title_font,label{
+.title_font,.document_label{
     font-family: 'M PLUS Rounded 1c', sans-serif;
     font-weight: bold;
     margin-top: 2%;
@@ -30,6 +30,46 @@
     }
     .title_font{margin-top: 3%;}
 
+}
+#document_edit_itemarea{
+    background-color: #fff;
+    border-radius: 8px; 
+    margin-top: 2%;
+    padding: 1% 0;
+    width: 100%;
+
+}
+#document_item_edit_header{
+    background-color: #996633;
+    border-left: 14px solid red;
+    border-radius: 4px;
+    color: #fff;
+    font-weight: bold;
+    margin-top: 2%;
+    padding: 12px;
+    
+}
+#document_itemedit_table{
+    background-color: #d0bf86;
+    border-radius: 9px;
+    th{font-size: 18px;}
+    td{
+        text-align: left;
+    }
+}
+#document_edit_modal-h3{
+    background-color: #4e9977;
+    border-left: 8px solid #996633;
+    border-radius:6px;
+    color: #4933ca;
+    font-weight:bold;
+    font-size: 22px;
+    padding: 18px;
+    
+}
+#document_modal_table{
+    background-color: #fff;
+    th{background-color: bisque;}
 }
 /* スマホ用レイアウト */
 @media screen and (max-width:767px){
