--- a/app/views/documents/edit.html.erb
+++ b/app/views/documents/edit.html.erb
@@ -20,28 +20,36 @@
     <%= f.submit "質問を編集する",class:"btn btn-warning",style:"margin-top:-3%;" %>
 
     <table class="table" id="document_itemedit_table">
-    <thead>
-      <tr>
-        <th width="70%;">質問項目</th><th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @document.document_items.each do |item| %>
-        <%= fields_for "items[]", item do |af| %>
-          <tr>
-            <td><%= af.text_area :content,rows:4,class:"form-control" %></td>
-            <td>
-              <%= link_to "削除","#",class:"btn btn-primary btn-lg",style:"width:80%;" if @document.document_items.count > 1 %>
-              <%= link_to "選択肢表示",document_select_editmodal_path(item),remote:true,class:"btn btn-success btn-lg",style:"width:80%;" if item.document_selects.count >0 %>
-            </td>
-          </tr>
-        <% end %>  
-      <% end %>
-    </tbody>
-  </table>
-  <% end %>
+      <thead>
+        <tr>
+          <th width="70%;">質問項目</th><th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @document.document_items.each do |item| %>
+          <%= fields_for "items[]", item do |af| %>
+            <tr>
+              <td><%= af.text_area :content,rows:4,class:"form-control" %></td>
+              <td>
+                <%= link_to "削除","#",class:"btn btn-primary btn-lg",style:"width:80%;" if @document.document_items.count > 1 %>
+                <%= link_to "選択肢表示",document_select_editmodal_path(item),remote:true,class:"btn btn-success btn-lg",style:"width:80%;" if item.document_selects.count >0 %>
+              </td>
+            </tr>
+          <% end %>  
+        <% end %>
+      </tbody>
+   </table>
+   <% end %>
+   <div style="border-top:1px dotted black"></div>
+    <p id="document_item_add_p">
+      質問項目を追加するには下のフォームに入力して追加してください。
+    </p>
+    <%= form_with(url:document_item_add_path(@document),local:true) do |f| %>
+      <%= f.text_area :content,rows:4,class:"form-control",placeholder:"追加項目を入力してください。" %>
+      <%= f.submit "質問項目追加",class:"btn btn-primary",style:"margin-top:1%;" %>
+    <% end %>
   </div>  
-</div>
+ </div>
 <% end %>
 <style>
   body{ background-color:#d0d0d0;}
